--- a/locales/fr.json
+++ b/locales/fr.json
@@ -43,7 +43,7 @@
   "footer.link2": "https://numerique.canada.ca/transparence/avis/",
   "footer.link2.desc": "Avis",
   "form.ccb": "Recevez-vous l’Allocation canadienne pour enfants?",
-  "form.gross_income": "Quel est votre revenu total (avant taxes) en 2019 ou des 12 dernier mois ?",
+  "form.gross_income": "Quel est votre revenu total (avant impôts) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
   "form.reduced_income": "Combien de revenu avant impôts anticipez-vous recevoir à chaque mois à partir de maintenant?",
