--- a/locales/en.json
+++ b/locales/en.json
@@ -117,5 +117,9 @@
   "your_situation.some_income.5": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.unchanged_income.1": "You’re working from home.",
   "your_situation.unchanged_income.2": "You’re on paid leave.",
-  "your_situation.unchanged_income.3": "You’re retired."
+  "your_situation.unchanged_income.3": "You’re retired.",
+  "plans_for_school.title": "Plans for school",
+  "plans_for_school.1": "Yes.",
+  "plans_for_school.2": "No.",
+  "form.plans_for_school": "Are you planning to go to college or university in September 2020?"
 }
