--- a/locales/fr.json
+++ b/locales/fr.json
@@ -20,6 +20,7 @@
   "ccb.title": "Allocation canadienne pour enfants",
   "ccb_payment.header": "Paiements additionnels de l’Allocation canadienne pour enfants ",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
+  "cesb.header": "Aide pour les étudiants via la Prestation canadienne d’urgence pour les étudiants",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
   "ei_regular_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_sickness_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
