--- a/locales/fr.json
+++ b/locales/fr.json
@@ -121,5 +121,6 @@
   "plans_for_school.title": "Poursuivre vos études",
   "plans_for_school.1": "Oui.",
   "plans_for_school.2": "Non.",
-  "form.plans_for_school": "Planifiez vous poursuivre vos études postsecondaires en septembre 2020?"
+  "form.plans_for_school": "Planifiez vous poursuivre vos études postsecondaires en septembre 2020?",
+  "your_situation.unchanged_income.4": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi."
 }
