--- a/locales/en.json
+++ b/locales/en.json
@@ -21,6 +21,7 @@
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "cesb.header": "Help for students through the Canada Emergency Student Benefit",
+  "cssg.header": "Money for school if you volunteer for national service during the pandemic",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
   "ei_regular_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_sickness_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
