--- a/locales/fr.json
+++ b/locales/fr.json
@@ -21,6 +21,7 @@
   "ccb_payment.header": "Paiements additionnels de l’Allocation canadienne pour enfants ",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "cesb.header": "Aide pour les étudiants via la Prestation canadienne d’urgence pour les étudiants",
+  "cssg.header": "Bourse canadienne pour le bénévolat étudiant",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
   "ei_regular_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_sickness_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
