--- a/locales/fr.json
+++ b/locales/fr.json
@@ -119,5 +119,6 @@
   "your_situation.some_income.5": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
   "your_situation.unchanged_income.1": "Vous faites du télétravail.",
   "your_situation.unchanged_income.2": "Vous êtes en congé payé.",
-  "your_situation.unchanged_income.3": "Vous êtes retraité."
+  "your_situation.unchanged_income.3": "Vous êtes retraité.",
+  "student_financial_aid.header": "Plus d’aide financière aux études pour l’année scolaire 2010-21"
 }
