--- a/locales/en.json
+++ b/locales/en.json
@@ -103,6 +103,7 @@
   "student_debt.1": "Yes.",
   "student_debt.2": "No.",
   "student_debt.title": "Student loans",
+  "student_financial_aid.header": "More financial aid for 2020-21 school year",
   "student_loan.header": "No student loan payments for 6 months",
   "unchanged_income.title": "Your situation",
   "wordmark.alt": "Symbol of the Government of Canada",
@@ -119,6 +120,5 @@
   "your_situation.some_income.5": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.unchanged_income.1": "You’re working from home.",
   "your_situation.unchanged_income.2": "You’re on paid leave.",
-  "your_situation.unchanged_income.3": "You’re retired.",
-  "student_financial_aid.header": "More financial aid for 2020-21 school year"
+  "your_situation.unchanged_income.3": "You’re retired."
 }
