--- a/locales/en.json
+++ b/locales/en.json
@@ -109,7 +109,8 @@
   "your_situation.no_income.3": "You’re on unpaid leave to care for a child or sick person.",
   "your_situation.no_income.4": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.no_income.5": "You were on parental leave recently, but you cannot return to work due to COVID-19.",
-  "your_situation.no_income.6": "You were on Employment Insurance and your claim ended after December 29, 2019.",
+  "your_situation.no_income.6": "You were a college or university student during the 2019-20 school year and now cannot find work.",
+  "your_situation.no_income.7": "You were on Employment Insurance Regular or Fishing Benefits and your claim ended on or after January 5, 2020.",
   "your_situation.some_income.1": "Your employer has reduced your hours due to COVID-19.",
   "your_situation.some_income.2": "You’ve lost one or two part-time jobs and still have some income.",
   "your_situation.some_income.3": "You’re self-employed and lost some income but you still have some paid work.",
