--- a/locales/en.json
+++ b/locales/en.json
@@ -38,10 +38,12 @@
   "feedback.question": "Check all the issues that apply",
   "feedback.submit": "Submit",
   "feedback.thanks": "Thank you for your feedback.",
-  "footer.link1": "https://digital.canada.ca/legal/privacy/",
-  "footer.link1.desc": "Privacy policy",
-  "footer.link2": "https://digital.canada.ca/legal/terms/",
-  "footer.link2.desc": "Terms and conditions",
+  "footer.contact": "https://www.canada.ca/en/contact.html",
+  "footer.contact.desc": "Contact information",
+  "footer.privacy": "https://digital.canada.ca/legal/privacy/",
+  "footer.privacy.desc": "Privacy policy",
+  "footer.terms": "https://digital.canada.ca/legal/terms/",
+  "footer.terms.desc": "Terms and conditions",
   "form.ccb": "Do you receive the Canada Child Benefit?",
   "form.gross_income": "How much total income before taxes did you earn from paid work in 2019 or the last 12 months?",
   "form.lost_job": "Choose the description that best fits your situation",
