--- a/locales/fr.json
+++ b/locales/fr.json
@@ -38,10 +38,12 @@
   "feedback.question": "Cochez tous les problèmes qui s’appliquent.",
   "feedback.submit": "Soumettre",
   "feedback.thanks": "Merci de nous avoir aidés à améliorer le service!",
-  "footer.link1": "https://numerique.canada.ca/transparence/confidentialite/",
-  "footer.link1.desc": "Politique de confidentialité",
-  "footer.link2": "https://numerique.canada.ca/transparence/avis/",
-  "footer.link2.desc": "Avis",
+  "footer.contact": "https://www.canada.ca/fr/contact.html",
+  "footer.contact.desc": "Coordonnées",
+  "footer.privacy": "https://numerique.canada.ca/transparence/confidentialite/",
+  "footer.privacy.desc": "Politique de confidentialité",
+  "footer.terms": "https://numerique.canada.ca/transparence/avis/",
+  "footer.terms.desc": "Avis",
   "form.ccb": "Recevez-vous l’Allocation canadienne pour enfants?",
   "form.gross_income": "Quel est votre revenu total (avant impôts) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
