add Date modified to bottom of page

--- a/locales/en.json
+++ b/locales/en.json
@@ -20,6 +20,7 @@
   "ccb.title": "Canada Child Benefit",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
+  "date_modified": "Date modified:",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
   "ei_regular_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_sickness_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
