Adding error pages according to figma

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,13 +1,14 @@
 {
-  "404": "404",
-  "500": "500",
+  "500.title": "Une erreur innatendue s’est produite",
+  "500.error": "Il y a un problème avec ce service. Veuillez essayer plus tard",
+  "404.title": "Nous ne pouvons trouver cette page Web",
+  "404.error": "Si vous avez retranscrit  cette adresse, assurez-vous qu’elle soit correcte. Si vous avez collé cette adresse, assurez-vous d’avoir copié l’adresse complète.",
   "Cancel": "Annuler",
   "Error:": "Erreur",
   "Government of Canada": "Gouvernement du Canada",
   "Internal server error": "Erreur interne du serveur",
   "Language Selection": "Sélection de la langue",
   "Next": "Continuer",
-  "Page not found": "Page non trouvée",
   "Please correct the errors on the page": "Veuillez corriger les erreurs trouvées dans la page",
   "Skip to main content": "Passer au contenu principal",
   "app.phase": "ALPHA",
@@ -25,6 +26,8 @@
   "ei_sickness_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_workshare.header": "Parlez à votre employeur et à vos collègues du programme Travail partagé de l’assurance-emploi",
   "errors.multipleChoiceGeneric": "Vous devez choisir une option ci-dessous",
+  "error-link.header": "Peut-être cherchiez-vous",
+  "error-link.text": "Trouver de l’aide financière pendant la COVID-19",
   "feedback": "Feedback",
   "feedback-thanks.text": "Merci de nous avoir aidés à améliorer le service!",
   "feedback-thanks.title": "Merci!",
