add new freetext field support to feedback component

--- a/locales/en.json
+++ b/locales/en.json
@@ -36,8 +36,10 @@
   "feedback.5": "You're worried about your privacy",
   "feedback.6": "Other",
   "feedback.button": "Report a problem or mistake on this page",
+  "feedback.personal_warning": "Do not include your personal or financial details.",
   "feedback.question": "Check all the issues that apply",
   "feedback.submit": "Submit",
+  "feedback.tell_us_more": "Can you tell us more?",
   "feedback.thanks": "Thank you for your feedback.",
   "footer.contact": "https://www.canada.ca/en/contact.html",
   "footer.contact.desc": "Contact information",
