--- a/locales/en.json
+++ b/locales/en.json
@@ -120,27 +120,5 @@
   "your_situation.some_income.5": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.unchanged_income.1": "You’re working from home.",
   "your_situation.unchanged_income.2": "You’re on paid leave.",
-  "your_situation.unchanged_income.3": "You’re retired.",
-  "e.header": "e.header",
-  "i.header": "i.header",
-  "_.header": "_.header",
-  "r.header": "r.header",
-  "g.header": "g.header",
-  "u.header": "u.header",
-  "l.header": "l.header",
-  "a.header": "a.header",
-  "c.header": "c.header",
-  "b.header": "b.header",
-  ",.header": ",.header",
-  "n.header": "n.header",
-  "t.header": "t.header",
-  "h.header": "h.header",
-  "p.header": "p.header",
-  "y.header": "y.header",
-  "m.header": "m.header",
-  "o.header": "o.header",
-  "d.header": "d.header",
-  "f.header": "f.header",
-  "s.header": "s.header",
-  ".header": ".header"
+  "your_situation.unchanged_income.3": "You’re retired."
 }
