--- a/locales/en.json
+++ b/locales/en.json
@@ -61,7 +61,7 @@
   "form.student_debt": "Do you have student loans you owe the government?",
   "form.your_situation.no_income": "Choose the description that best fits your situation.",
   "form.your_situation.some_income": "Choose the description that best fits your situation.",
-  "form.your_situation.unchanged_income": "Choose the description that best fits your situation".,
+  "form.your_situation.unchanged_income": "Choose the description that best fits your situation.",
   "gross_income.1": "$4,999 or less.",
   "gross_income.2": "$5,000 or more.",
   "gross_income.title": "Income earned",
