--- a/locales/fr.json
+++ b/locales/fr.json
@@ -98,7 +98,7 @@
   "results_title_no_results": "Revenez voir dans quelques semaines",
   "rrif.1": "Oui.",
   "rrif.2": "Non.",
-  "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite",
+  "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite (FERR)",
   "rrif.title": "FERR",
   "some_income.title": "Votre situation",
   "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere' target='_blank'>un prêt d’urgence</a>.",
