--- a/locales/en.json
+++ b/locales/en.json
@@ -103,9 +103,8 @@
   "some_income.title": "Your situation",
   "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan</a>.",
   "start.details.summary": "Are you a Canadian stuck abroad?",
-  "start.intro.1": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
   "start.intro.2": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
-  "start.intro.3": "New measures are still being announced, and we’re working to include them as quickly as possible.",
+  "start.intro.3": "<strong>New measures are still being announced</strong>, and we’re working to include them as quickly as possible.",
   "start.lastupdated": "Last updated",
   "start.submit": "Start now",
   "start.title": "Find financial help during COVID-19",
