--- a/locales/fr.json
+++ b/locales/fr.json
@@ -103,9 +103,8 @@
   "some_income.title": "Votre situation",
   "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere' target='_blank'>un prêt d’urgence</a>.",
   "start.details.summary": "Êtes vous un Canadien actuellement à l’étranger?",
-  "start.intro.1": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
   "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir vorte admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
-  "start.intro.3": "De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible.",
+  "start.intro.3": "<strong>De nouvelles prestations sont constamment créées</strong> et nous travaillons à les inclure aussitôt que possible.",
   "start.lastupdated": "Dernière mise à jour le",
   "start.submit": "Commencer",
   "start.title": "Trouver de l’aide financière pendant la COVID-19",
