add high school grad option

--- a/locales/en.json
+++ b/locales/en.json
@@ -135,5 +135,6 @@
   "plans_for_school.1": "Yes.",
   "plans_for_school.2": "No.",
   "form.plans_for_school": "Are you planning to go to college or university in September 2020?",
-  "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work."
+  "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work.",
+  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and now cannot find work."
 }
