--- a/locales/fr.json
+++ b/locales/fr.json
@@ -135,5 +135,6 @@
   "plans_for_school.1": "Oui.",
   "plans_for_school.2": "Non.",
   "form.plans_for_school": "Planifiez vous poursuivre vos études postsecondaires en septembre 2020?",
-  "your_situation.unchanged_income.4": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi."
+  "your_situation.unchanged_income.4": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi.",
+  "your_situation.unchanged_income.5": "Vous obtiendrez un diplôme d’études secondaires pour l’année scolaire 2019-2020 et ne pouvez pas trouver un emploi."
 }
