add OAS benefit cards and calculation

--- a/locales/en.json
+++ b/locales/en.json
@@ -83,6 +83,7 @@
   "oas.1": "Yes.",
   "oas.2": "No.",
   "oas.3": "You're not sure.",
+  "oas.header": "More money for seniors",
   "oas.title": "Old Age Security",
   "phase.desc": "This site will change as we test ideas.",
   "plans_for_school.1": "Yes.",
