--- a/locales/fr.json
+++ b/locales/fr.json
@@ -83,6 +83,7 @@
   "oas.1": "Oui.",
   "oas.2": "Non.",
   "oas.3": "Vous n’êtes pas certain.",
+  "oas.header": "Plus d’argent pour les aînés",
   "oas.title": "Pension de la Sécurité de vieillesse",
   "phase.desc": "Ce site évoluera au fur et à mesure que nous testons des idées.",
   "plans_for_school.1": "Oui.",
