Add OAS Question and Benefit card (#434)
* Add OAS question

* add page title

* add OAS benefit cards and calculation

* update tests for oas

* fix typos in french

* move oas up the order

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,10 +1,10 @@
 {
-  "500.title": "Une erreur innatendue s’est produite",
-  "500.error1": "Il y a un problème avec ce service.",
-  "500.error2": "Veuillez essayer plus tard.",
-  "404.title": "Nous ne pouvons trouver cette page Web",
   "404.error1": "Si vous avez retranscrit  cette adresse, assurez-vous qu’elle soit correcte.",
   "404.error2": "Si vous avez collé cette adresse, assurez-vous d’avoir copié l’adresse complète.",
+  "404.title": "Nous ne pouvons trouver cette page Web",
+  "500.error1": "Il y a un problème avec ce service.",
+  "500.error2": "Veuillez essayer plus tard.",
+  "500.title": "Une erreur innatendue s’est produite",
   "Cancel": "Annuler",
   "Error:": "Erreur",
   "Government of Canada": "Gouvernement du Canada",
@@ -30,9 +30,9 @@
   "ei_regular_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_sickness_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_workshare.header": "Parlez à votre employeur et à vos collègues du programme Travail partagé de l’assurance-emploi",
-  "errors.multipleChoiceGeneric": "Vous devez choisir une option ci-dessous",
   "error-link.header": "Peut-être cherchiez-vous",
   "error-link.text": "Trouver de l’aide financière pendant la COVID-19",
+  "errors.multipleChoiceGeneric": "Vous devez choisir une option ci-dessous",
   "feedback": "Feedback",
   "feedback-thanks.text": "Merci de nous avoir aidés à améliorer le service!",
   "feedback-thanks.title": "Merci!",
@@ -58,6 +58,8 @@
   "form.gross_income": "Quel est votre revenu total (avant impôts) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
+  "form.oas": "Recevez-vous la pension de la Sécurité de vieillesse (SV)?",
+  "form.plans_for_school": "Planifiez vous poursuivre vos études postsecondaires en septembre 2020?",
   "form.reduced_income": "Combien de revenu avant impôts anticipez-vous recevoir à chaque mois à partir de maintenant?",
   "form.rrif": "Possédez vous un fond enregistré de revenu de retraite?",
   "form.student_debt": "Devez vous payer une dette d’étude au gouvernement?",
@@ -78,7 +80,15 @@
   "mortgage_payments.3": "Non, vous n’êtes pas inquiet en ce moment.",
   "mortgage_payments.title": "Votre logement",
   "no_income.title": "Votre situation",
+  "oas.1": "Oui.",
+  "oas.2": "Non.",
+  "oas.3": "Vous n’êtes pas certain.",
+  "oas.header": "Plus d’argent pour les aînés",
+  "oas.title": "Pension de la Sécurité de vieillesse",
   "phase.desc": "Ce site évoluera au fur et à mesure que nous testons des idées.",
+  "plans_for_school.1": "Oui.",
+  "plans_for_school.2": "Non.",
+  "plans_for_school.title": "Poursuivre vos études",
   "reduced_income.1": "1000 $ ou moins.",
   "reduced_income.2": "1001 $ ou plus.",
   "reduced_income.title": "Votre revenu partiel",
@@ -131,9 +141,5 @@
   "your_situation.unchanged_income.1": "Vous faites du télétravail.",
   "your_situation.unchanged_income.2": "Vous êtes en congé payé.",
   "your_situation.unchanged_income.3": "Vous êtes retraité.",
-  "plans_for_school.title": "Poursuivre vos études",
-  "plans_for_school.1": "Oui.",
-  "plans_for_school.2": "Non.",
-  "form.plans_for_school": "Planifiez vous poursuivre vos études postsecondaires en septembre 2020?",
   "your_situation.unchanged_income.4": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi."
 }
