--- a/locales/en.json
+++ b/locales/en.json
@@ -23,7 +23,7 @@
   "ccb.title": "Canada Child Benefit",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
-  "cesb.header": "Help for students through the Canada Emergency Student Benefit",
+  "cesb.header": "Help for students through the Canada Emergency Student Benefit (CESB)",
   "cssg.header": "Money for school if you volunteer for national service during the pandemic",
   "date_modified": "Date modified:",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
