--- a/locales/en.json
+++ b/locales/en.json
@@ -136,5 +136,5 @@
   "plans_for_school.2": "No.",
   "form.plans_for_school": "Are you planning to go to college or university in September 2020?",
   "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work.",
-  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and now cannot find work."
+  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021."
 }
