--- a/locales/fr.json
+++ b/locales/fr.json
@@ -105,7 +105,7 @@
     "one": "%s programme pour vous aider",
     "other": "%s programmes pour vous aider"
   },
-  "results_title_no_results": "Revenez voir dans quelques semaines",
+  "results_title_no_results": "Revenez voir plus tard",
   "rrif.1": "Oui.",
   "rrif.2": "Non.",
   "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite (FERR)",
