Minor text changes on Results screen (#441)
* Minor text changes for no_results

* update date modified

* Change working of results header

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -102,10 +102,10 @@
   "results.other_potential_help.preamble": "L’aide suivante est également disponible :",
   "results.situation_changes": "Si votre situation change, vous pouvez répondre aux questions à nouveau pour trouver de nouveaux programmes d’aide.",
   "results_title": {
-    "one": "%s programme pour vous aider",
-    "other": "%s programmes pour vous aider"
+    "one": "Résultats",
+    "other": "%s résultats"
   },
-  "results_title_no_results": "Revenez voir dans quelques semaines",
+  "results_title_no_results": "Revenez voir plus tard",
   "rrif.1": "Oui.",
   "rrif.2": "Non.",
   "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite (FERR)",
