--- a/locales/fr.json
+++ b/locales/fr.json
@@ -111,6 +111,9 @@
   "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite (FERR)",
   "rrif.title": "FERR",
   "some_income.title": "Votre situation",
+  "start.business": "Vous êtes propriétaire d’entreprise?",
+  "start.businesslink.text": "Trouvez du soutien pour votre entreprise.",
+  "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=fr",
   "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
   "start.intro.3": "<strong>De nouvelles prestations sont constamment créées</strong> et nous travaillons à les inclure aussitôt que possible.",
   "start.lastupdated": "Dernière mise à jour le",
@@ -140,8 +143,5 @@
   "your_situation.unchanged_income.2": "Vous êtes en congé payé.",
   "your_situation.unchanged_income.3": "Vous êtes retraité.",
   "your_situation.unchanged_income.4": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi.",
-  "your_situation.unchanged_income.5": "Vous obtiendrez un diplôme d’études secondaires pour l’année scolaire 2019-2020 et avez appliqué pour un programme d’études postsecondaires débutant avant le 1er février 2021.",
-  "start.business": "Vous êtes propriétaire d’entreprise?",
-  "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=fr",
-  "start.businesslink.text": "Trouvez du soutien pour votre entreprise."
+  "your_situation.unchanged_income.5": "Vous obtiendrez un diplôme d’études secondaires pour l’année scolaire 2019-2020 et avez appliqué pour un programme d’études postsecondaires débutant avant le 1er février 2021."
 }
