use lang-specific links in fip

--- a/locales/en.json
+++ b/locales/en.json
@@ -70,6 +70,7 @@
   "gross_income.2": "$5,000 or more.",
   "gross_income.title": "Income earned",
   "gst_credit.header": "More money through the GST credit",
+  "header.fip-link": "https://www.canada.ca/en.html",
   "lost_job.1": "All your income has stopped.",
   "lost_job.2": "Some of your income has stopped.",
   "lost_job.3": "Your income is not affected by COVID-19.",
