--- a/locales/fr.json
+++ b/locales/fr.json
@@ -70,6 +70,7 @@
   "gross_income.2": "5000 $ ou plus.",
   "gross_income.title": "Votre revenu",
   "gst_credit.header": "Argent supplémentaire grâce au crédit pour la TPS",
+  "header.fip-link": "https://www.canada.ca/fr.html",
   "lost_job.1": "Vous avez perdu votre revenu en entier.",
   "lost_job.2": "Vous avez perdu une partie de votre revenu.",
   "lost_job.3": "Votre revenu n’est pas affecté par la COVID-19.",
