Add meta tags for social media sharing (#455)
* Add meta tags for social media sharing
Add siteUrl to all routes for the meta tags

* correct some indentation in two controller files

* Update twitter card tag
Add alt tag for meta image

* Fix meta image tags
Move siteUrl to be in app.locals for use instead

* fix indentation on title in controllers

* might want to include the meta file

* add height and width image meta tag

* add canonical url

* correct canonical url

* update meta image alt

* fb angry about start page redirects, so let's just make it the full start page link

* add french translation

Co-authored-by: Dave Samojlenko <dave.samojlenko@cds-snc.ca>

--- a/locales/en.json
+++ b/locales/en.json
@@ -144,5 +144,7 @@
   "your_situation.unchanged_income.2": "You’re on paid leave.",
   "your_situation.unchanged_income.3": "You’re retired.",
   "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work.",
-  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021."
+  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021.",
+  "app.description": "Answer some questions to find which federal programs can help you.",
+  "app.metaImageAlt": "Screen shot of the Find financial help during COVID-19 start page"
 }
