--- a/locales/en.json
+++ b/locales/en.json
@@ -13,6 +13,8 @@
   "Next": "Next",
   "Please correct the errors on the page": "Please correct the errors on the page",
   "Skip to main content": "Skip to main content",
+  "app.description": "Answer some questions to find which federal programs can help you.",
+  "app.metaImageAlt": "Screen shot of the Find financial help during COVID-19 start page",
   "app.phase": "ALPHA",
   "app.title": "Find financial help during COVID-19",
   "button.back": "Back",
@@ -60,6 +62,7 @@
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
   "form.oas": "Are you enrolled in the Old Age Security (OAS) pension?",
   "form.plans_for_school": "Are you planning to go to college or university in September 2020?",
+  "form.province": "Where do you live?",
   "form.reduced_income": "How much do you expect to earn before taxes per month now?",
   "form.rrif": "Do you have a Registered Retirement Income Fund (RRIF)?",
   "form.student_debt": "Do you have student loans you owe the government?",
@@ -90,6 +93,20 @@
   "plans_for_school.1": "Yes.",
   "plans_for_school.2": "No.",
   "plans_for_school.title": "Plans for school",
+  "province.ab": "Alberta.",
+  "province.bc": "British Colombia.",
+  "province.mb": "Manitoba.",
+  "province.nb": "New Brunswick.",
+  "province.nl": "Newfoundland and Labrador.",
+  "province.ns": "Nova Scotia.",
+  "province.nt": "Northwest Territories.",
+  "province.nu": "Nunavut.",
+  "province.on": "Ontario.",
+  "province.pe": "Prince Edward Island.",
+  "province.qc": "Quebec.",
+  "province.sk": "Saskatchewan.",
+  "province.title": "Your province or territory",
+  "province.yt": "Yukon.",
   "reduced_income.1": "$1,000 or less.",
   "reduced_income.2": "$1,001 or more.",
   "reduced_income.title": "Your reduced income",
@@ -144,7 +161,5 @@
   "your_situation.unchanged_income.2": "You’re on paid leave.",
   "your_situation.unchanged_income.3": "You’re retired.",
   "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work.",
-  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021.",
-  "app.description": "Answer some questions to find which federal programs can help you.",
-  "app.metaImageAlt": "Screen shot of the Find financial help during COVID-19 start page"
+  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021."
 }
