add benefit card header locale strings

--- a/locales/en.json
+++ b/locales/en.json
@@ -93,6 +93,19 @@
   "plans_for_school.1": "Yes.",
   "plans_for_school.2": "No.",
   "plans_for_school.title": "Plans for school",
+  "province-ab.header": "Check with the Alberta government",
+  "province-bc.header": "Check with the British Columbia (BC) government",
+  "province-mb.header": "Check with the Manitoba government",
+  "province-nb.header": "Check with the New Brunswick government",
+  "province-nl.header": "Check with the Newfoundland and Labrador government",
+  "province-ns.header": "Check with the Nova Scotia government",
+  "province-nt.header": "Check with the Northwest Territories government",
+  "province-nu.header": "Check with the Nunavut government",
+  "province-on.header": "Check with the Ontario government",
+  "province-pe.header": "Check with the Prince Edward Island (PEI) government",
+  "province-qc.header": "Check with the Quebec government",
+  "province-sk.header": "Check with the Saskatchewan government",
+  "province-yt.header": "Check with the Yukon government",
   "province.ab": "Alberta.",
   "province.bc": "British Colombia.",
   "province.mb": "Manitoba.",
