--- a/locales/fr.json
+++ b/locales/fr.json
@@ -93,6 +93,19 @@
   "plans_for_school.1": "Oui.",
   "plans_for_school.2": "Non.",
   "plans_for_school.title": "Poursuivre vos études",
+  "province-ab.header": "Vérifiez auprès du gouvernement de l’Alberta",
+  "province-bc.header": "Vérifiez auprès du gouvernement de la Colombie-Britannique (C.-B.)",
+  "province-mb.header": "Vérifiez auprès du gouvernement du Manitoba",
+  "province-nb.header": "Vérifiez auprès du gouvernement du Nouveau-Brunswick",
+  "province-nl.header": "Vérifiez auprès du gouvernement de Terre-Neuve-et-Labrador",
+  "province-ns.header": "Vérifiez auprès du gouvernement de la Nouvelle-Écosse",
+  "province-nt.header": "Vérifiez auprès du gouvernement des Territoires du Nord-Ouest",
+  "province-nu.header": "Vérifiez auprès du gouvernement du Nunavut",
+  "province-on.header": "Vérifiez auprès du gouvernement de l’Ontario",
+  "province-pe.header": "Vérifiez auprès du gouvernement de l’Île-du-Prince-Édouard (Î.-P.-É.)",
+  "province-qc.header": "Vérifiez auprès du gouvernement du Québec",
+  "province-sk.header": "Vérifiez auprès du gouvernement de la Saskatchewan",
+  "province-yt.header": "Vérifiez auprès du gouvernement du Yukon",
   "province.ab": "Alberta.",
   "province.bc": "Colombie-Britannique.",
   "province.mb": "Manitoba.",
