--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
   "Next": "Next",
   "Please correct the errors on the page": "Please correct the errors on the page",
   "Skip to main content": "Skip to main content",
-  "app.description": "Answer some questions to find which federal programs can help you.",
+  "app.description": "Answer some questions to find which programs can help you.",
   "app.metaImageAlt": "Screen shot of the Find financial help during COVID-19 start page",
   "app.phase": "ALPHA",
   "app.title": "Find financial help during COVID-19",
@@ -145,7 +145,7 @@
   "start.business": "Own a business?",
   "start.businesslink.text": "Find support for your business.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=en",
-  "start.intro.2": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
+  "start.intro.2": "Answer some questions to find which programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
   "start.intro.3": "<strong>New measures are still being announced</strong>, and we’re working to include them as quickly as possible.",
   "start.lastupdated": "Last updated",
   "start.submit": "Find help",
