--- a/locales/fr.json
+++ b/locales/fr.json
@@ -13,7 +13,7 @@
   "Next": "Continuer",
   "Please correct the errors on the page": "Veuillez corriger les erreurs trouvées dans la page",
   "Skip to main content": "Passer au contenu principal",
-  "app.description": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous.",
+  "app.description": "Répondez à quelques questions pour trouver quels programmes d’aide financière s’offrent à vous.",
   "app.metaImageAlt": "Capture d’écran de la page de démarrage «Trouver de l’aide financière pendant la COVID-19»",
   "app.phase": "ALPHA",
   "app.title": "Trouver de l’aide financière pendant la COVID-19",
@@ -145,7 +145,7 @@
   "start.business": "Vous êtes propriétaire d’entreprise?",
   "start.businesslink.text": "Trouvez du soutien pour votre entreprise.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=fr",
-  "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
+  "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
   "start.intro.3": "<strong>De nouvelles prestations sont constamment créées</strong> et nous travaillons à les inclure aussitôt que possible.",
   "start.lastupdated": "Dernière mise à jour le",
   "start.submit": "Trouver de l’aide",
