--- a/locales/en.json
+++ b/locales/en.json
@@ -107,7 +107,7 @@
   "province-sk.header": "Check with the Saskatchewan government",
   "province-yt.header": "Check with the Yukon government",
   "province.ab": "Alberta.",
-  "province.bc": "British Colombia.",
+  "province.bc": "British Columbia.",
   "province.mb": "Manitoba.",
   "province.nb": "New Brunswick.",
   "province.nl": "Newfoundland and Labrador.",
